@@ -17,19 +17,16 @@
 package de.gematik.prepare.pooling.strategies;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CaseInsensitiveExactStrategy extends MatchStrategy {
 
   public CaseInsensitiveExactStrategy(List<String> groups) {
 
-    super(groups.stream().map(String::toLowerCase).collect(Collectors.toList()));
-
+    super(groups.stream().map(String::toLowerCase).toList());
   }
 
   @Override
   protected boolean doesMatch(String group) {
     return this.pattern.stream().anyMatch(e -> e.equals(group.toLowerCase()));
   }
-
 }
